Fix ethers overflow error

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,6 +54,10 @@ form {
     background-color: #fff;
     color: rgb(0, 0, 0, 0.8);
     border: 0.1875rem solid #fff;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   & > input {
